--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -183,6 +183,8 @@ services:
     image: selenium/standalone-chrome
     ports:
       - 4444:4444
+    privileged: true
+    shm_size: 2g
 
   parser:
     build: parser
