--- a/parser/Dockerfile
+++ b/parser/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.10-alpine
 
-RUN apk add --no-cache make automake gcc g++ subversion python3-dev libffi-dev
+RUN apk add --no-cache bash make automake gcc g++ subversion python3-dev libffi-dev
 
 WORKDIR /app
 
