--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -186,39 +186,41 @@ services:
   #     restart_policy:
   #       condition: none
 
-  # cheduler:
-  #   image: ${REGISTRY}/pharm-site-php-cli:${IMAGE_TAG}
-  #   environment:
-  #     APP_NAME: Сеть аптек 120/80
-  #     APP_URL: https://аптека05.рф
-  #     LOG_CHANNEL: stack
-  #     LOG_LEVEL: debug
-  #     DB_CONNECTION: pgsql
-  #     DB_HOST: db-postgres
-  #     DB_DATABASE: app
-  #     DB_USERNAME: app
-  #     DB_PASSWORD: ${DB_PASSWORD}
-  #     FILESYSTEM_DRIVER: public
-  #     BROADCAST_DRIVER: redis
-  #     CACHE_DRIVER: redis
-  #     QUEUE_CONNECTION: redis
-  #     REDIS_HOST: redis
-  #     REDIS_CLIENT: predis
-  #     MAIL_HOST: smtp.yandex.ru
-  #     MAIL_PORT: 465
-  #     MAIL_USERNAME: info@120на80.рф
-  #     MAIL_PASSWORD: ${MAIL_PASSWORD}
-  #     MAIL_FROM_ADDRESS: info@120на80.рф
-  #     MAIL_FROM_NAME: Сеть аптек 120/80
-  #  command: sh -c 'php artisan schedule:run'
-  #  deploy:
-  #    labels:
-  #      - swarm.cronjob.enable=true
-  #      - swarm.cronjob.schedule=* * * * *
-  #      - swarm.cronjob.skip-running=true
-  #    replicas: 0
-  #    restart_policy:
-  #      condition: none
+  cheduler:
+    image: ${REGISTRY}/pharm-site-php-cli:${IMAGE_TAG}
+    environment:
+      APP_NAME: Сеть аптек 120/80
+      APP_URL: https://аптека05.рф
+      LOG_CHANNEL: stack
+      LOG_LEVEL: debug
+      DB_CONNECTION: pgsql
+      DB_HOST: db-postgres
+      DB_DATABASE: app
+      DB_USERNAME: app
+      DB_PASSWORD: ${DB_PASSWORD}
+      FILESYSTEM_DRIVER: public
+      BROADCAST_DRIVER: redis
+      CACHE_DRIVER: redis
+      QUEUE_CONNECTION: redis
+      REDIS_HOST: redis
+      REDIS_CLIENT: predis
+      MAIL_HOST: smtp.yandex.ru
+      MAIL_PORT: 465
+      MAIL_USERNAME: info@120на80.рф
+      MAIL_PASSWORD: ${MAIL_PASSWORD}
+      MAIL_FROM_ADDRESS: info@120на80.рф
+      MAIL_FROM_NAME: Сеть аптек 120/80
+    command: sh -c 'php artisan schedule:run'
+    volumes:
+      - uploads:/app/storage/app/public
+    deploy:
+      labels:
+        - swarm.cronjob.enable=true
+        - swarm.cronjob.schedule=* * * * *
+        - swarm.cronjob.skip-running=true
+      replicas: 0
+      restart_policy:
+        condition: none
 
   site-redis-queue:
     image: ${REGISTRY}/pharm-site-php-cli:${IMAGE_TAG}
@@ -245,6 +247,8 @@ services:
       MAIL_FROM_ADDRESS: info@120на80.рф
       MAIL_FROM_NAME: Сеть аптек 120/80
     command: sh -c 'wait-for-it redis:6379 -t 60 && php artisan redis:subscribe'
+    volumes:
+      - uploads:/app/storage/app/public
     deploy:
       restart_policy:
         condition: on-failure
@@ -271,7 +275,7 @@ services:
     deploy:
       labels:
         - swarm.cronjob.enable=true
-        - swarm.cronjob.schedule=30 13 * * *
+        - swarm.cronjob.schedule=0 2 * * *
         - swarm.cronjob.skip-running=true
       replicas: 0
       restart_policy:
