--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -213,6 +213,7 @@ services:
     command: sh -c 'php artisan schedule:run'
     volumes:
       - uploads:/app/storage/app/public
+      - ./logs:/app/storage/logs
     deploy:
       labels:
         - swarm.cronjob.enable=true
@@ -221,6 +222,41 @@ services:
       replicas: 0
       restart_policy:
         condition: none
+
+  queue-worker:
+    image: ${REGISTRY}/pharm-site-php-cli:${IMAGE_TAG}
+    environment:
+      APP_NAME: Сеть аптек 120/80
+      APP_URL: https://аптека05.рф
+      LOG_CHANNEL: stack
+      LOG_LEVEL: debug
+      DB_CONNECTION: pgsql
+      DB_HOST: db-postgres
+      DB_DATABASE: app
+      DB_USERNAME: app
+      DB_PASSWORD: ${DB_PASSWORD}
+      FILESYSTEM_DRIVER: public
+      BROADCAST_DRIVER: redis
+      CACHE_DRIVER: redis
+      QUEUE_CONNECTION: redis
+      REDIS_HOST: redis
+      REDIS_CLIENT: predis
+      MAIL_HOST: smtp.yandex.ru
+      MAIL_PORT: 465
+      MAIL_USERNAME: info@120на80.рф
+      MAIL_PASSWORD: ${MAIL_PASSWORD}
+      MAIL_FROM_ADDRESS: info@120на80.рф
+      MAIL_FROM_NAME: Сеть аптек 120/80
+    command: sh -c 'wait-for-it redis:6379 -t 60 && php artisan queue:work'
+    volumes:
+      - uploads:/app/storage/app/public
+      - ./logs:/app/storage/logs
+    deploy:
+      restart_policy:
+        condition: on-failure
+        delay: 5s
+        max_attempts: 5
+        window: 120s
 
   site-redis-queue:
     image: ${REGISTRY}/pharm-site-php-cli:${IMAGE_TAG}
@@ -249,6 +285,7 @@ services:
     command: sh -c 'wait-for-it redis:6379 -t 60 && php artisan redis:subscribe'
     volumes:
       - uploads:/app/storage/app/public
+      - ./logs:/app/storage/logs
     deploy:
       restart_policy:
         condition: on-failure
