--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -56,7 +56,7 @@ services:
       labels:
         - traefik.enable=true
         - traefik.docker.network=traefik-public
-        - traefik.http.routers.panel.rule=Host(`panel.xn--05-6kcay4a7ay.xn--p1ai`)
+        - traefik.http.routers.panel.rule=Host(`panel.xn--12080-6ve4g.xn--p1ai`)
         - traefik.http.services.panel.loadBalancer.server.port=80
         - traefik.http.routers.panel.middlewares=secure-headers
         - traefik.http.routers.panel.entryPoints=https
@@ -79,10 +79,10 @@ services:
       labels:
         - traefik.enable=true
         - traefik.docker.network=traefik-public
-        - traefik.http.routers.site.rule=Host(`xn--05-6kcay4a7ay.xn--p1ai`) || Host(`www.xn--05-6kcay4a7ay.xn--p1ai`)
+        - traefik.http.routers.site.rule=Host(`xn--12080-6ve4g.xn--p1ai`) || Host(`www.xn--12080-6ve4g.xn--p1ai`) || Host(`120-na-80.ru`) || Host(`www.120-na-80.ru`)
         - traefik.http.services.site.loadBalancer.server.port=80
-        - traefik.http.middlewares.site-redirect.redirectRegex.regex=^(https?://)www.xn--05-6kcay4a7ay.xn--p1ai/(.*)$$
-        - traefik.http.middlewares.site-redirect.redirectRegex.replacement=$${1}xn--05-6kcay4a7ay.xn--p1ai/$${2}
+        - traefik.http.middlewares.site-redirect.redirectRegex.regex=^(https?://)www.xn--12080-6ve4g.xn--p1ai/(.*)$$
+        - traefik.http.middlewares.site-redirect.redirectRegex.replacement=$${1}xn--12080-6ve4g.xn--p1ai/$${2}
         - traefik.http.middlewares.site-redirect.redirectRegex.permanent=true
         - traefik.http.routers.site.middlewares=site-redirect,secure-headers
         - traefik.http.routers.site.entryPoints=https
@@ -112,9 +112,9 @@ services:
       QUEUE_CONNECTION: redis
       SESSION_DRIVER: redis
       SESSION_LIFETIME: 120
-      SESSION_DOMAIN: '.xn--05-6kcay4a7ay.xn--p1ai'
-      SANCTUM_STATEFUL_DOMAINS: '*.xn--05-6kcay4a7ay.xn--p1ai'
-      CORS_ORIGIN: https://panel.xn--05-6kcay4a7ay.xn--p1ai
+      SESSION_DOMAIN: '.xn--12080-6ve4g.xn--p1ai'
+      SANCTUM_STATEFUL_DOMAINS: '*.xn--12080-6ve4g.xn--p1ai'
+      CORS_ORIGIN: https://panel.xn--12080-6ve4g.xn--p1ai
       REDIS_HOST: redis
       REDIS_CLIENT: predis
       MAIL_HOST: smtp.yandex.ru
