--- a/api/docker/prod/nginx/Dockerfile
+++ b/api/docker/prod/nginx/Dockerfile
@@ -7,3 +7,5 @@ COPY ./docker/common/nginx/conf.d /etc/nginx/conf.d
 WORKDIR /app
 
 COPY ./public ./public
+
+HEALTHCHECK --interval=5s --timeout=3s --start-period=1s CMD curl --fail http://127.0.0.1/health || exit 1
