add carousel & fix parser

--- a/panel/docker/dev/nginx/conf.d/default.conf
+++ b/panel/docker/dev/nginx/conf.d/default.conf
@@ -12,19 +12,17 @@ server {
         return 200 'alive';
     }
 
-    location /sockjs-node {
-        set $upstream http://panel-node:3000;
+    location /ws {
         proxy_set_header  Host $host;
         proxy_set_header  Upgrade $http_upgrade;
         proxy_set_header  Connection "Upgrade";
-        proxy_pass        $upstream;
+        proxy_pass        http://panel-node:3000;
         proxy_redirect    off;
     }
 
     location / {
-        set $upstream http://panel-node:3000;
         proxy_set_header  Host $host;
-        proxy_pass        $upstream;
+        proxy_pass        http://panel-node:3000;
         proxy_redirect    off;
     }
 }
