--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -321,18 +321,12 @@ services:
       - traefik.http.routers.redis.entryPoints=http
       - traefik.http.services.redis.loadBalancer.server.port=6379
 
-  selenium:
-    image: selenium/standalone-chrome
-    ports:
-      - 4444:4444
-    privileged: true
-    shm_size: 2g
-
   parser:
-    build: parser
+    build:
+      context: parser
+      dockerfile: docker/Dockerfile
     environment:
       APP_NAME: Сеть аптек 120/80
-      SELENIUM_URL: http://selenium:4444/wd/hub
     volumes:
       - ./parser:/app
       - uploads:/app/data
