--- a/site/composer.json
+++ b/site/composer.json
@@ -14,10 +14,12 @@
         "ext-pdo": "*",
         "ext-simplexml": "*",
         "cviebrock/eloquent-sluggable": "^8.0",
+        "cviebrock/laravel-elasticsearch": "^9.0",
         "diglactic/laravel-breadcrumbs": "^7.0",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "guzzlehttp/psr7": "^1.7",
         "hflabs/dadata": "^20.12",
         "intervention/image": "^2.5",
         "kalnoy/nestedset": "^6.0",
