--- a/site/docker/common/nginx/conf.d/default.conf
+++ b/site/docker/common/nginx/conf.d/default.conf
@@ -1,3 +1,5 @@
+client_max_body_size 10M;
+
 server {
     listen 80;
     charset utf-8;
@@ -10,6 +12,14 @@ server {
     location /health {
         add_header Content-Type text/plain;
         return 200 'alive';
+    }
+
+    location /ws {
+        proxy_set_header  Host $host;
+        proxy_set_header  Upgrade $http_upgrade;
+        proxy_set_header  Connection "Upgrade";
+        proxy_pass        http://site-node:3000;
+        proxy_redirect    off;
     }
 
     location / {
