--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,12 +26,6 @@ services:
       - traefik.http.routers.client.rule=Host(`client.pharm.test`)
       - traefik.http.routers.client.entryPoints=http
       - traefik.http.services.client.loadBalancer.server.port=80
-    healthcheck:
-      test: [ "curl", "--fail http://127.0.0.1/health || exit 1" ]
-      interval: 60s
-      timeout: 10s
-      retries: 5
-      start_period: 10s
 
   client-node:
     build:
@@ -41,12 +35,6 @@ services:
     command: sh -c "until [ -f .ready ] ; do sleep 1 ; done && yarn dev"
     links:
       - "api:api.pharm.test"
-    healthcheck:
-      test: [ "curl", "--fail http://127.0.0.1:3000/health || exit 1" ]
-      interval: 60s
-      timeout: 10s
-      retries: 5
-      start_period: 10s
 
   client-node-cli:
     build:
@@ -202,12 +190,6 @@ services:
       - traefik.http.routers.api.rule=Host(`api.pharm.test`)
       - traefik.http.routers.api.entryPoints=http,http_other
       - traefik.http.services.api.loadBalancer.server.port=80
-    healthcheck:
-      test: [ "curl", "--fail http://127.0.0.1/health || exit 1" ]
-      interval: 60s
-      timeout: 10s
-      retries: 5
-      start_period: 10s
 
   api-php-fpm:
     build:
@@ -238,16 +220,10 @@ services:
       MAIL_HOST: mailer
       MAIL_FROM_ADDRESS: info@pharm.test
       MAIL_FROM_NAME: Сеть аптек 120/80
-      FILESYSTEM_DRIVER: public
+      FILESYSTEM_DISK: public
     volumes:
       - ./api:/app
       - uploads:/app/storage/app/public
-    healthcheck:
-      test: [ "cgi-fcgi", "-bind -connect 127.0.0.1:9000 || exit 1" ]
-      interval: 60s
-      timeout: 10s
-      retries: 5
-      start_period: 10s
 
   api-php-cli:
     build:
@@ -277,7 +253,7 @@ services:
       MAIL_HOST: mailer
       MAIL_FROM_ADDRESS: info@pharm.test
       MAIL_FROM_NAME: Сеть аптек 120/80
-      FILESYSTEM_DRIVER: public
+      FILESYSTEM_DISK: public
     volumes:
       - ./api:/app
       - uploads:/app/storage/app/public
