--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-bootstrap": "^2.2.2",
     "react-cookie": "^4.1.1",
     "react-dom": "17.0.2",
+    "react-paginate": "^8.1.3",
     "react-redux": "^8.0.2",
     "react-use-storage": "^0.5.1",
     "remark": "^14.0.1",
