--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@svgr/webpack": "^6.2.1",
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.43",
+    "@types/react-transition-group": "^4.4.5",
     "autoprefixer": "^10.4.7",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
@@ -29,10 +30,13 @@
     "react-dom": "17.0.2",
     "react-paginate": "^8.1.3",
     "react-redux": "^8.0.2",
+    "react-transition-group": "^4.4.5",
+    "react-use": "^17.4.0",
     "react-use-storage": "^0.5.1",
     "remark": "^14.0.1",
     "remark-html": "^15.0.0",
     "sass": "^1.49.11",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "uncontrollable": "^7.2.1"
   }
 }
