--- a/client/docker/prod/nginx/conf.d/default.conf
+++ b/client/docker/prod/nginx/conf.d/default.conf
@@ -7,14 +7,9 @@ server {
 
     resolver 127.0.0.11 ipv6=off;
 
-    location ~* \.(?:ico|gif|jpe?g|png|woff2?|eot|otf|ttf|svg|js|css)$ {
+    location /_next/static {
+        alias /app/.next/static;
         expires 7d;
-        access_log off;
-        add_header Cache-Control "public";
-    }
-
-    location ~* \.(?:css|js)$ {
-        expires 1y;
         access_log off;
         add_header Cache-Control "public";
     }
