--- a/client/docker/prod/node/Dockerfile
+++ b/client/docker/prod/node/Dockerfile
@@ -3,9 +3,11 @@ FROM node:17-alpine as builder
 WORKDIR /app
 
 COPY ./package.json ./yarn.lock ./
+
 RUN yarn install && yarn cache clean
 
 COPY ./ ./
+
 RUN yarn build
 
 FROM node:17-alpine
@@ -20,14 +22,11 @@ COPY --from=builder /app/next.config.js ./
 COPY --from=builder /app/public ./public
 COPY --from=builder /app/package.json ./package.json
 
-COPY --from=builder --chown=nextjs:nodejs /app/.next ./.next
-# COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
-# COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
+COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
+COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
 
 USER nextjs
 
 EXPOSE 3000
-
-ENV PORT 3000
 
 CMD ["node", "server.js"]
