--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,8 @@ services:
   client-node:
     build:
       context: client/docker/dev/node
+    environment:
+      NEXT_PUBLIC_API_URL: http://api.pharm.test
     volumes:
       - ./client:/app
     command: sh -c "until [ -f .ready ] ; do sleep 1 ; done && yarn dev"
