--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-bootstrap": "^2.2.2",
     "react-cookie": "^4.1.1",
     "react-dom": "17.0.2",
+    "react-notifications": "^1.7.4",
     "react-redux": "^8.0.2",
     "react-use": "^17.4.0",
     "react-use-storage": "^0.5.1",
