--- a/client/package.json
+++ b/client/package.json
@@ -31,13 +31,13 @@
     "react-imask": "^6.4.2",
     "react-notifications": "^1.7.4",
     "react-redux": "^8.0.2",
-    "react-timer-hook": "^3.0.5",
     "react-use": "^17.4.0",
     "react-use-storage": "^0.5.1",
     "remark": "^14.0.1",
     "remark-html": "^15.0.0",
     "sass": "^1.49.11",
     "typescript": "^4.6.3",
-    "uncontrollable": "^7.2.1"
+    "uncontrollable": "^7.2.1",
+    "use-timer": "^2.0.1"
   }
 }
