--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -287,7 +287,7 @@ services:
     deploy:
       restart_policy:
         condition: on-failure
-        delay: 5s
+        delay: 10s
         max_attempts: 5
         window: 120s
 
@@ -322,7 +322,7 @@ services:
     deploy:
       restart_policy:
         condition: on-failure
-        delay: 5s
+        delay: 10s
         max_attempts: 5
         window: 120s
 
@@ -351,7 +351,7 @@ services:
       replicas: 1
       update_config:
         parallelism: 1
-        delay: 5s
+        delay: 10s
 
   # elasticsearch:
   #   image: elasticsearch:8.3.2
@@ -377,12 +377,15 @@ services:
 
   redis:
     image: redis:6.2-alpine
+    volumes:
+      - redis-data:/data
     deploy:
       placement:
         constraints: [ node.role == manager ]
 
 volumes:
   db-postgres:
+  redis-data:
   uploads:
   traefik-certs:
   es-data:
