--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -149,6 +149,7 @@ services:
       MAIL_FROM_ADDRESS: info@120-na-80.ru
       MAIL_FROM_NAME: Сеть аптек 120/80
       ELASTICSEARCH_HOST: elasticsearch
+    command: sh -c 'php artisan event:cache'
     volumes:
       - uploads:/app/storage/app/public
       - ./logs:/app/storage/logs
@@ -285,7 +286,7 @@ services:
         max_attempts: 5
         window: 120s
 
-  redis-queue:
+  redis-subscribe:
     image: ${REGISTRY}/pharm-api-php-cli:${IMAGE_TAG}
     environment:
       APP_NAME: Сеть аптек 120/80
