--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,12 +25,12 @@ services:
     labels:
       - traefik.enable=true
       - traefik.docker.network=traefik-public
-      - traefik.http.routers.site.rule=Host(`localhost`) || Host(`www.localhost`)
+      - traefik.http.routers.site.rule=Host(`pharm.test`) || Host(`www.pharm.test`)
       - traefik.http.routers.site.entryPoints=http
       - traefik.http.routers.site.service=site_main
       - traefik.http.services.site_main.loadBalancer.server.port=80
-      - traefik.http.middlewares.site-redirect.redirectRegex.regex=^(https?://)www.localhost/(.*)$$
-      - traefik.http.middlewares.site-redirect.redirectRegex.replacement=$${1}localhost/$${2}
+      - traefik.http.middlewares.site-redirect.redirectRegex.regex=^(https?://)www.pharm.test/(.*)$$
+      - traefik.http.middlewares.site-redirect.redirectRegex.replacement=$${1}pharm.test/$${2}
       - traefik.http.middlewares.site-redirect.redirectRegex.permanent=true
       - traefik.http.routers.site.middlewares=site-redirect
 
@@ -38,13 +38,13 @@ services:
     build:
       context: client/docker/dev/node
     environment:
-      NEXT_PUBLIC_API_URL: http://api.localhost
-      NEXT_PUBLIC_COOKIE_DOMAIN: localhost
+      NEXT_PUBLIC_API_URL: http://api.pharm.test
+      NEXT_PUBLIC_COOKIE_DOMAIN: .pharm.test
     volumes:
       - ./client:/app
     command: sh -c "until [ -f .ready ] ; do sleep 1 ; done && yarn dev"
     links:
-      - "api:api.localhost"
+      - "api:api.pharm.test"
 
   client-node-cli:
     build:
@@ -61,7 +61,7 @@ services:
     labels:
       - traefik.enable=true
       - traefik.docker.network=traefik-public
-      - traefik.http.routers.panel.rule=Host(`panel.localhost`)
+      - traefik.http.routers.panel.rule=Host(`panel.pharm.test`)
       - traefik.http.routers.panel.entryPoints=http
       - traefik.http.services.panel.loadBalancer.server.port=80
 
@@ -69,7 +69,8 @@ services:
     build:
       context: panel/docker/dev/node
     environment:
-      REACT_APP_API_URL: http://api.localhost
+      REACT_APP_API_URL: http://api.pharm.test
+      REACT_APP_COOKIE_DOMAIN: .pharm.test
     volumes:
       - ./panel:/app
     command: sh -c "until [ -f .ready ] ; do sleep 1 ; done && yarn start"
@@ -93,7 +94,7 @@ services:
     labels:
       - traefik.enable=true
       - traefik.docker.network=traefik-public
-      - traefik.http.routers.api.rule=Host(`api.localhost`)
+      - traefik.http.routers.api.rule=Host(`api.pharm.test`)
       - traefik.http.routers.api.entryPoints=http,http_other
       - traefik.http.services.api.loadBalancer.server.port=80
 
@@ -103,7 +104,7 @@ services:
       dockerfile: dev/php-fpm/Dockerfile
     environment:
       APP_NAME: Сеть аптек 120/80
-      APP_URL: http://api.localhost
+      APP_URL: http://api.pharm.test
       APP_ENV: local
       APP_DEBUG: true
       LOG_CHANNEL: stack
@@ -117,6 +118,7 @@ services:
       QUEUE_CONNECTION: redis
       SESSION_DRIVER: redis
       SESSION_CONNECTION: cache
+      SESSION_DOMAIN: .pharm.test
       REDIS_HOST: redis
       MAIL_HOST: mailer
       MAIL_FROM_ADDRESS: info@localhost
@@ -132,7 +134,7 @@ services:
       dockerfile: dev/php-cli/Dockerfile
     environment:
       APP_NAME: Сеть аптек 120/80
-      APP_URL: http://api.localhost
+      APP_URL: http://api.pharm.test
       APP_ENV: local
       APP_DEBUG: true
       LOG_CHANNEL: stack
@@ -172,7 +174,7 @@ services:
     labels:
       - traefik.enable=true
       - traefik.docker.network=traefik-public
-      - traefik.http.routers.mailer.rule=Host(`mailer.localhost`)
+      - traefik.http.routers.mailer.rule=Host(`mailer.pharm.test`)
       - traefik.http.routers.mailer.entryPoints=http
       - traefik.http.services.mailer.loadBalancer.server.port=8025
 
