--- a/api/composer.json
+++ b/api/composer.json
@@ -14,6 +14,7 @@
         "cviebrock/laravel-elasticsearch": "^9.0",
         "fruitcake/laravel-cors": "^3.0",
         "guzzlehttp/guzzle": "^7.2",
+        "hisorange/browser-detect": "^4.5",
         "kalnoy/nestedset": "^6.0",
         "laravel/framework": "^9.2",
         "laravel/tinker": "^2.7",
